--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories {
 	mavenCentral()
 	
     dependencies {
-		javacc 'net.java.dev.javacc:javacc:7.0.1'
+		javacc 'net.java.dev.javacc:javacc:7.0.2'
     }
 }
 compileJjtree {
@@ -46,13 +46,21 @@ model {
 						include "*.cc"
 					}
 					exportedHeaders {
-						srcDir compileJjtree.outputDirectory
+						srcDirs compileJjtree.inputDirectory, compileJjtree.outputDirectory
 					}
 			   }
 			   cpp {
 					source {
 						srcDir projectDir
 						include "*.cpp"
+					}
+					source {
+						srcDir compileJjtree.inputDirectory
+						srcDir  new File(projectDir, 'rts')
+						include "*.cc"
+					}
+					exportedHeaders {
+						srcDirs compileJjtree.inputDirectory, compileJjtree.outputDirectory, new File(projectDir, 'rts')
 					}
 					lib sources.generated
 				}
