--- a/JJTree/AST/vs2015/SPLC.vcxproj
+++ b/JJTree/AST/vs2015/SPLC.vcxproj
@@ -74,14 +74,14 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>../rts;../jjt;../gen;$(IncludePath)</IncludePath>
+    <IncludePath>../vst;../rts;../jjt;../gen;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>../rts;../jjt;../gen;$(IncludePath)</IncludePath>
+    <IncludePath>../vst;../rts;../jjt;../gen;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -146,8 +146,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="..\gen\SPL.jj" />
     <None Include="..\jjt\SPL.jjt" />
+    <None Include="..\spl\fact.spl" />
+    <None Include="..\spl\odd.spl" />
+    <None Include="..\spl\sqrt.spl" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\gen\CharStream.cc" />
@@ -189,12 +191,13 @@
     <ClCompile Include="..\jjt\ASTVarDeclaration.cc" />
     <ClCompile Include="..\jjt\ASTWhileStatement.cc" />
     <ClCompile Include="..\jjt\ASTWriteStatement.cc" />
-    <ClCompile Include="..\jjt\MyNode.cpp" />
+    <ClCompile Include="..\jjt\MyNode.cc" />
     <ClCompile Include="..\rts\Boolean.cpp" />
     <ClCompile Include="..\rts\Integer.cpp" />
     <ClCompile Include="..\rts\Object.cpp" />
     <ClCompile Include="..\rts\Variable.cpp" />
     <ClCompile Include="..\SPLC.cpp" />
+    <ClCompile Include="..\vst\DumpVisitor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\gen\CharStream.h" />
@@ -248,6 +251,7 @@
     <ClInclude Include="..\rts\Integer.h" />
     <ClInclude Include="..\rts\Object.h" />
     <ClInclude Include="..\rts\Variable.h" />
+    <ClInclude Include="..\vst\DumpVisitor.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
