--- a/JJTree/VST/build.gradle
+++ b/JJTree/VST/build.gradle
@@ -13,7 +13,7 @@
 	
  model {
 	    components { 
-        SPLCA(NativeExecutableSpec) {
+        SPLCV(NativeExecutableSpec) {
 			sources {
 				generated(CppSourceSet) {
 					source {
